# SHL

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: agent.py  catalog.py  config.py  embeddings.py  index.py  llm.py  main.py  prompts.py  schemas.py  tools.py  vector_store.py
data/: catalog_embeddings.npz
deploy/: github-deploy-permissions.json  github-oidc-trust-policy.json
scripts/: build_index.py  next_turn.py  run_samples.py
