[project]
name = "shl-assessment-recommender"
version = "0.1.0"
description = "Conversational SHL Individual Test Solutions recommender (FastAPI + Gemini via OpenAI client + FAISS)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openai>=1.55",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "faiss-cpu>=1.9",
    "numpy>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
